dnl Process this file with autoconf to produce a configure script.
dnl $Id$

dnl This program is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; either version 2 of the License, or
dnl (at your option) any later version.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License along
dnl with this program; if not, write to the Free Software Foundation, Inc.,
dnl 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
dnl
dnl Author contact information:
dnl
dnl E-mail: philip-fuse@shadowmagic.org.uk

AC_INIT(gdoscat.c)
AM_CONFIG_HEADER(config.h)

dnl Use automake to produce `Makefile.in'
AM_INIT_AUTOMAKE(gdos-tools, 0.0.0.1)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL

dnl Check for big endianness
AC_C_BIGENDIAN

dnl Check for header files
AC_CHECK_HEADERS(strings.h)

dnl Check that libgdos is available
AC_ARG_WITH(libgdos-prefix,
[  --with-libgdos-prefix=PFX where libgdos is installed (optional)],
LIBGDOS_CFLAGS=-I$withval/include; LIBGDOS_LIBS=-L$withval/lib,
LIBGDOS_CFLAGS=""; LIBGDOS_LIBS="")
ac_save_CPPFLAGS="$CPPFLAGS"
CPPFLAGS="$CFLAGS $LIBGDOS_CFLAGS $GLIB_CFLAGS"
AC_CHECK_HEADERS(libgdos.h,LIBGDOS_LIBS="$LIBGDOS_LIBS -lgdos",
		 AC_MSG_ERROR(Sorry - I need libgdos to be available))
CPPFLAGS="$ac_save_CPPFLAGS"
AC_SUBST(LIBGDOS_CFLAGS)
AC_SUBST(LIBGDOS_LIBS)


dnl Do we want lots of warning messages?
AC_MSG_CHECKING(whether lots of warnings requested)
AC_ARG_ENABLE(warnings,
[  --enable-warnings       give lots of warnings if using gcc],
if test "$enableval" = yes; then
    warnings=yes;
else
    warnings=no;
fi,
warnings=no)
AC_MSG_RESULT($warnings)

dnl If it appears we're using gcc as our compiler, turn on warnings
if test "$ac_cv_prog_gcc" = yes; then
    CFLAGS="$CFLAGS -Wall"
    dnl And possibly lots of warnings
    if test "$warnings" = yes; then
        CFLAGS="$CFLAGS -Wstrict-prototypes -Wmissing-prototypes -Winline -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wwrite-strings -Waggregate-return -W -Wsign-compare"
    fi
fi

dnl Check that libdsk is available
AC_ARG_WITH(libdsk-prefix,
[  --with-libdsk-prefix=PFX where libdsk is installed (optional)],
LIBDSK_CFLAGS=-I$withval/include; LIBDSK_LIBS=-L$withval/lib,
LIBDSK_CFLAGS=""; LIBDSK_LIBS="")
ac_save_CPPFLAGS="$CPPFLAGS"
CPPFLAGS="$CPPFLAGS $LIBDSK_CFLAGS"
AC_CHECK_HEADERS(libdsk.h, LIBDSK_LIBS="$LIBDSK_LIBS -ldsk",
		 AC_MSG_ERROR(Sorry - I need libdsk to be available))
CPPFLAGS="$ac_save_CPPFLAGS"
AC_SUBST(LIBDSK_CFLAGS)
AC_SUBST(LIBDSK_LIBS)

AC_OUTPUT(Makefile \
hacking/Makefile \
man/Makefile)
